adding simple output and mock model file
Signed-off-by: Nicolas Pierre <nicolas.pierre@artelys.com>